--- a/services/authentication/Dockerfile
+++ b/services/authentication/Dockerfile
@@ -4,14 +4,22 @@ WORKDIR /service
 
 COPY requirements.txt .
 
+RUN apt-get update && apt-get install -y \
+    build-essential \
+    pkg-config \
+    default-libmysqlclient-dev \
+    gcc \
+    libssl-dev \
+    && rm -rf /var/lib/apt/lists/*
+
 RUN pip install --no-cache-dir -r requirements.txt
 
-RUN groupadd -r appgroup && useradd -r -g appgroup appuser
+COPY ./src ./src
 
-COPY src .
+RUN groupadd -r appgroup && useradd -r -g appgroup appuser
 
 USER appuser
 
 EXPOSE 8000
 
-CMD ["fastapi", "run", "--host", "0.0.0.0", "application.py"]
+CMD ["fastapi", "run", "--host", "0.0.0.0", "src/application.py"]
